# DocBabel

./: .gitignore  README.md  README.zh-CN.md  docker-compose.allinone.yml  docker-compose.yml
.github/workflows/: release.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260315_0000_initial_schema.py  20260316_0001_add_task_auto_glossary_columns.py  20260316_0002_add_dedup_hash_columns.py  20260316_0003_add_file_library_duration_and_glossary_collaboration.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  files.py  glossaries.py  models.py  tasks.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: babeldoc_assets.py  queue.py  translator_worker.py
backend/tests/: test_admin_recovery.py
docker/allinone/: Dockerfile  backend-start.sh  entrypoint.sh  nginx.conf  supervisord.conf
docs/: ARCHITECTURE.md  DEPLOYMENT.md  USER_MANUAL.md
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  auth-context.ts  auth.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: AdminPage.tsx  FilesPage.tsx  GlossariesPage.tsx  LoginPage.tsx  ModelsPage.tsx  RegisterPage.tsx  TasksPage.tsx  TranslatePage.tsx
scripts/: install.sh
